# work_salary_bot

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  run.sh  setup.bat  setup.ps1  setup.sh
alembic/: env.py
alembic/versions/: 0001_initial_initial_schema.py  0002_geofence_confirmation_queue.py  0003_pending_shift_attempts.py
app/: bot.py  config.py  context.py  health.py  logging_config.py
app/database/: database.py  enums.py  models.py  session.py  storage.py  tables.py
app/handlers/: __init__.py  analytics.py  calendar.py  common.py  export.py  geofence.py  goals.py  helpers.py  history.py  payments.py  settings.py  work.py  work_time.py
app/keyboards/: inline.py  main.py
app/middlewares/: access.py
app/repositories/: audit.py  calendar.py  fsm.py  geofence.py  mappers.py  payments.py  reminders.py  sessions.py  users.py
app/services/: chat_ui.py  exports.py  geofence_notifications.py  goal_planner.py  payments.py  payroll.py  reminder_engine.py  report_builder.py  reports.py  salary_calculator.py  time_tracking.py
app/states/: forms.py
app/use_cases/: analysis.py  geofence.py  work_time.py
app/utils/: formatters.py
data/: bot.db-wal
tests/: conftest.py  test_comment_style.py  test_config.py  test_database.py  test_fsm.py  test_geofence.py  test_goal_planner.py  test_keyboards.py  test_payments.py  test_payroll.py  test_salary_calculator.py  test_time_tracking.py
