[project]
name = "work-salary-bot"
version = "1.0.0"
description = "Personal Telegram bot for work time and salary tracking"
requires-python = ">=3.12"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
