[project]
name = "work-salary-bot"
version = "2.2.0"
description = "Personal Telegram bot for work time, salary and goal tracking"
requires-python = ">=3.12"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
